force-app/main/default/objects/Contact/fields/Is_a_Foster__c.field-meta.xml
<CustomField>
    <fullName>Is_a_Foster__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Animal Shelter to indicate the Contact is a Foster. Used in Flows to filter Contact records returned</description>
    <inlineHelpText>Check this if the Contact is a Animal Fosterer</inlineHelpText>
    <label>Is a Foster</label>
    <type>Checkbox</type>
</CustomField>