force-app/main/default/objects/Contact/fields/Is_an_Adopter__c.field-meta.xml
<CustomField>
    <fullName>Is_an_Adopter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Animal Shelter Starter Pack to indicate that the Contact has successfully adopted an Animal</description>
    <inlineHelpText>Contact is an Animal Adopter</inlineHelpText>
    <label>Is an Adopter</label>
    <type>Checkbox</type>
</CustomField>